# cpics-local

./: Cargo.toml  Dockerfile  k8s.secrets.env
src/: main.rs
